# DATN

./: .env  .gitignore  TODO.md  build_doc.py  config.yaml  decuong.txt  pyproject.toml  start.bat  start.sh
DocOutput/: DATN_Report_v3.docx
Planning/: Outline.md
Ref/: HoangThaiDuy_DATN.docx
code/: .env.example  README.md  config.yaml  main.py  prompts.yaml  pyproject.toml
codebase/: .env.example  .gitignore  config.yaml  debloat.py  main.py  pyproject.toml  run_all.bat  run_server.bat
codebase/scripts/: generate_eval_dataset.py  list_models.py
codebase/src/app/: api.py  dependencies.py
codebase/src/app/routers/: admin_data.py  admin_scrape.py  admin_users.py  auth.py  chat.py  zalo_bot.py
codebase/src/app/static/: admin.html  index.html
codebase/src/app/static/css/: style.css
codebase/src/app/static/js/: components.js  utils.js
codebase/src/app/static/js/admin/: abbreviations.js  api.js  auth.js  dashboard.js  dataLoader.js  main.js  scrape.js  tester.js  users.js  utils.js
codebase/src/app/static/js/chat/: api.js  main.js  ui.js
codebase/src/config/: settings.py
codebase/src/core/: auth.py  chat_db.py  chat_service.py  indexing.py  multimodal.py  semantic_cache.py  vector_db.py
codebase/src/utils/: document_loader.py  logger_setup.py  scraper.py  zalo_bot.py  zalo_polling.py
codebase/tests/: evaluate.py  ragas_1200_dataset.json  test_smoke.py
codebase/tools/: set_webhook.py  webhook_forwarder.py
evaluate/: dataset.csv  evaluation_results.csv  run_evaluation.py
mapping/: function_list.md
presentation/: 01_Cau_Truc_Slide_10_Phut.md  (+6 more)
(+228 files in other folders)
