[project]
name = "datn-tlu-rag"
version = "0.1.0"
description = "A Multimodal RAG system for TLU admission information"
authors = [
    {name = "Trần Hồng Sơn"}
]
dependencies = [
    "google-genai==2.3.0",
    "langchain==1.3.10",
    "langchain-community==0.4.2",
    "langchain-text-splitters==1.1.2",
    "chromadb==1.5.9",
    "langchain-chroma==1.1.0",
    "python-dotenv==1.2.2",
    "beautifulsoup4==4.15.0",
    "requests==2.34.2",
    "docx2txt==0.9",
    "pypdf==6.13.3",
    "fastapi==0.136.1",
    "uvicorn==0.47.0",
    "python-multipart==0.0.29",
    "python-docx==1.2.0",
    "pydantic-settings==2.14.2",
    "pyyaml==6.0.3",
    "bcrypt==5.0.0",
    "rank_bm25==0.2.2",
    "numpy==2.4.6",
    "sseclient-py==1.9.0"
]

[project.optional-dependencies]
dev = [
    "pytest==8.4.2"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
